# doc-analyzer

./: .env.example  .gitignore  .golangci.yml  Makefile  README.md  config.yaml  doc_analyzer.spec  docker-compose.yml  go.mod  go.sum  pyproject.toml
cmd/server/: main.go
docker/: Dockerfile
internal/anomaly/: distance.go  isolation.go  service.go
internal/api/: analysis.go  extraction.go  handlers.go  projects.go  server.go  upload.go  visualization.go
internal/auth/: auth.go  handlers.go  middleware.go  repository.go  repository_test.go
internal/clustering/: keywords.go  kmeans.go  service.go
internal/contradiction/: analyzer.go  service.go  types.go
internal/embeddings/: cache.go  client.go  models.go
internal/similarity/: cosine.go  pairs.go  service.go
internal/storage/: document.go  project.go  statement.go
internal/visualization/: reducer.go  semantic.go  service.go
migrations/: 001_initial_schema.sql
pkg/models/: models.go
src-old/doc_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  models.py  parser.py  reporter.py  similarity.py
src/doc_analyzer/: analyzer.py  anomaly.py  cache.py  cli.py  clusterer.py  config.py  embedder.py  reporter.py  stats.py
tests/: test_anomaly.py  test_cache.py  test_parser.py
web/: Dockerfile  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: ClusterPanel.tsx  SemanticAxes.tsx  Visualization.tsx
web/src/pages/: Dashboard.tsx  Login.tsx  Projects.tsx
