[project]
name = "doc-analyzer"
version = "0.1.0"
description = "Semantic document analysis: contradictions, anomalies, and statistics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "httpx>=0.25",
    "typer>=0.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=6.0",
]

[project.scripts]
doc-analyzer = "doc_analyzer.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
